
Added bib_manager.py functions into bibmanager __init__.py package.

*****

Implemented init command-line interface and documentation.

*****

Added copyright text at the top of files.

*****

Implemented edit command-line interface and documentation.


*****  Wed Dec 26 10:04:30 CLT 2018  *****

Implemented merge command-line interface and documentation.
Tweaked main docs to display 'command' rather than a list of all
the commands.

*****

Implemented export command-line interface and documentation.


*****  Thu Dec 27 16:12:04 CLT 2018  *****

Raise exceptions for input entries without required fields in Bib().
Raise exceptions for user-input errors in loadfile().
Caught dry-run case in add_entries(), i.e., no new entries.

*****

Implemented add command-line interface and documentation.

*****

Added bibfile argument to build_bib() function, to redirect output.
Raise exception if there is bibfile is None and there is no
bibliography call in the .tex file.

*****

Implemented bibtex command-line interface and documentation.

*****

Renamed setup command to config.

*****

Added 'bold face' to some titles in command-line interface text.

*****

Renamed Sauthor() namedtuple to Sort_author().
Re-arranged Author() fields to be consistent with Sort_author().

*****

Modified Bib.__containts__() to match only against the first author
if the querry string begins with '^'.

*****

Raise exceptions for invalid inputs in parse_name().

*****

Re-factored bm.search() to search multiple authors.
Renamed 'author' argument to 'authors'.
Raise exceptions for invalid inputs.

******

Tweaked display_bibs() function to receive None as labels argument.
Added the function to __all__.

*****

Implemented repr_author() function to get a string representation of
an Author namedtuple in 'von Last, Jr, First' format.


*****  Fri Dec 28 09:51:56 CLT 2018  *****

Implemented get_authors() method for Bib() object, to get the string
representation of the author list of the entry.

*****
